--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     />
     <link
       rel="shortcut icon"
-      href="./enbt.ico"
+      href="./tab-favicon.ico"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Объяснение Excel-формул</title>
     <style>
       body {
         min-height: 100vh;
@@ -48,15 +48,13 @@
     </style>
   </head>
   <body>
-    <h1>Объяснение</h1>
-    <h2>
-      Заполните ячейки таблицы, выделенные желтым цветом, с помощью формул
-      Выделите цветом 5 максимальных значений по столбцу оборот по кассе
-    </h2>
+    <h1>Объяснение Excel-формул</h1>
+
+    <h2>Заполнение ячеек с формулами и выделение данных</h2>
     <h3>1️⃣ Оборот по кассе (B)</h3>
     <p>
       Если у тебя есть данные по количеству услуг (C) и средняя стоимость
-      услуги, вставь в пустые ячейки B:
+      услуги, используй:
     </p>
     <p class="terminal">=C2 * СРЗНАЧ(B:B)</p>
     <ul>
@@ -65,6 +63,7 @@
       <li>Вставь формулу и нажми Enter</li>
       <li>Протяни вниз, чтобы заполнить все строки</li>
     </ul>
+
     <h3>2️⃣ Кол-во услуг (C)</h3>
     <p>
       Если у тебя есть оборот по кассе (B), а средняя стоимость известна,
@@ -77,6 +76,7 @@
       <li>Вставь формулу и нажми Enter</li>
       <li>Протяни вниз, чтобы заполнить все строки</li>
     </ul>
+
     <h3>3️⃣ Место забора (D)</h3>
     <p>
       Если в таблице уже есть такой же номер заказа (A), найди его место забора:
@@ -88,8 +88,49 @@
       <li>Вставь формулу и нажми Enter</li>
       <li>Протяни вниз, чтобы заполнить все строки</li>
     </ul>
+
+    <h3>4️⃣ Выделение 5 максимальных значений</h3>
+    <p>
+      Чтобы выделить 5 наибольших значений в столбце "Оборот по кассе", сделай
+      следующее:
+    </p>
+    <ul>
+      <p>🔹 Как сделать:</p>
+      <li>Выдели столбец B</li>
+      <li>Перейди в "Условное форматирование"</li>
+      <li>Выбери "Правила отбора ячеек" → "10 наибольших значений"</li>
+      <li>Замени "10" на "5" и задай цвет выделения</li>
+    </ul>
+
+    <h3>5️⃣ Сумма значений в диапазоне</h3>
+    <p>Если хочешь посчитать сумму значений в столбце, используй:</p>
+    <p class="terminal">=СУММ(B2:B100)</p>
+    <ul>
+      <p>🔹 Как сделать:</p>
+      <li>Выбери ячейку, в которой нужно отобразить сумму</li>
+      <li>Введи формулу и нажми Enter</li>
+    </ul>
+
+    <h3>6️⃣ Среднее значение</h3>
+    <p>Чтобы найти среднее значение по столбцу, используй:</p>
+    <p class="terminal">=СРЗНАЧ(B2:B100)</p>
+    <ul>
+      <p>🔹 Как сделать:</p>
+      <li>Выбери ячейку, где нужно отобразить результат</li>
+      <li>Введи формулу и нажми Enter</li>
+    </ul>
+
+    <h3>7️⃣ Поиск определенного значения</h3>
+    <p>Чтобы найти, например, оборот для конкретного заказа, используй:</p>
+    <p class="terminal">=ВПР(номер_заказа; A:B; 2; ЛОЖЬ)</p>
+    <ul>
+      <p>🔹 Как сделать:</p>
+      <li>Выбери ячейку, в которой нужно отобразить результат</li>
+      <li>Введи формулу и нажми Enter</li>
+    </ul>
+
     <div class="footer">
-      <p>Надеюсь, что это поможет.</p>
+      <p>Надеюсь, что это поможет. Успехов в работе с Excel! 🚀</p>
     </div>
   </body>
 </html>
