--- a/index.html
+++ b/index.html
@@ -50,84 +50,81 @@
   <body>
     <h1>Объяснение Excel-формул</h1>
 
-    <h2>Заполнение ячеек с формулами и выделение данных</h2>
-    <h3>1️⃣ Оборот по кассе (B)</h3>
-    <p>
-      Если у тебя есть данные по количеству услуг (C) и средняя стоимость
-      услуги, используй:
+    <h2>Основные формулы и их применение</h2>
+
+    <h3>1️⃣ Сложение значений</h3>
+    <p>Чтобы сложить числа в диапазоне, используй:</p>
+    <p class="terminal">=СУММ(A1:A10)</p>
+
+    <h3>2️⃣ Среднее значение</h3>
+    <p>Чтобы вычислить среднее арифметическое:</p>
+    <p class="terminal">=СРЗНАЧ(A1:A10)</p>
+
+    <h3>3️⃣ Максимальное и минимальное значение</h3>
+    <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
+    <p class="terminal">=МАКС(A1:A10)</p>
+    <p class="terminal">=МИН(A1:A10)</p>
+
+    <h3>4️⃣ Количество записей</h3>
+    <p>Подсчет непустых ячеек:</p>
+    <p class="terminal">=СЧЁТЗ(A1:A10)</p>
+    <p>Подсчет только числовых значений:</p>
+    <p class="terminal">=СЧЁТ(A1:A10)</p>
+
+    <h3>5️⃣ Условные операторы</h3>
+    <p>Для проверки условий:</p>
+    <p class="terminal">=ЕСЛИ(A1>100; "Высокий"; "Низкий")</p>
+    <p>Объединение нескольких условий:</p>
+    <p class="terminal">
+      =ЕСЛИ(И(A1>50; B1<20); "Условие выполнено"; "Не выполнено")
     </p>
-    <p class="terminal">=C2 * СРЗНАЧ(B:B)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери первую пустую ячейку в столбце "Оборот по кассе"</li>
-      <li>Вставь формулу и нажми Enter</li>
-      <li>Протяни вниз, чтобы заполнить все строки</li>
-    </ul>
 
-    <h3>2️⃣ Кол-во услуг (C)</h3>
+    <h3>6️⃣ Поиск данных</h3>
+    <p>Для поиска значения в таблице по ключу:</p>
+    <p class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</p>
+    <p>Для поиска с учетом гибкости диапазона:</p>
+    <p class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</p>
+
+    <h3>7️⃣ Работа с датами</h3>
+    <p>Текущая дата и время:</p>
+    <p class="terminal">=СЕГОДНЯ()</p>
+    <p class="terminal">=СЕЙЧАС()</p>
+    <p>Разница между датами:</p>
+    <p class="terminal">=РАЗНДАТ(A1; B1; "D")</p>
+
+    <h3>8️⃣ Объединение текста</h3>
+    <p>Чтобы объединить текст из нескольких ячеек:</p>
+    <p class="terminal">=СЦЕПИТЬ(A1; " "; B1)</p>
+    <p>Или в новых версиях Excel:</p>
+    <p class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</p>
+
+    <h3>9️⃣ Округление чисел</h3>
+    <p>Округление до ближайшего целого:</p>
+    <p class="terminal">=ОКРУГЛ(A1; 0)</p>
+    <p>Округление вниз:</p>
+    <p class="terminal">=ОКРУГЛВНИЗ(A1; 0)</p>
+    <p>Округление вверх:</p>
+    <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
+
+    <h3>🔟 Работа с массивами</h3>
+    <p>Поиск максимального значения в каждой строке (новые версии Excel):</p>
+    <p class="terminal">=МАКСЕСЛИМН(A1:D1)</p>
+    <p>Сумма значений по условиям:</p>
+    <p class="terminal">=СУММЕСЛИ(A1:A10; ">10"; B1:B10)</p>
+
+    <h3>1️⃣1️⃣ Разделение текста</h3>
+    <p>Извлечение первых 5 символов:</p>
+    <p class="terminal">=ЛЕВСИМВ(A1; 5)</p>
+    <p>Извлечение последних 3 символов:</p>
+    <p class="terminal">=ПРАВСИМВ(A1; 3)</p>
+    <p>Извлечение текста из середины строки:</p>
+    <p class="terminal">=ПСТР(A1; 3; 4)</p>
+
+    <h3>📌 Автозаполнение</h3>
     <p>
-      Если у тебя есть оборот по кассе (B), а средняя стоимость известна,
-      используй:
+      После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
+      формулу ко всему столбцу.
     </p>
-    <p class="terminal">=B2 / СРЗНАЧ(C:C)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери первую пустую ячейку в столбце "Кол-во услуг"</li>
-      <li>Вставь формулу и нажми Enter</li>
-      <li>Протяни вниз, чтобы заполнить все строки</li>
-    </ul>
-
-    <h3>3️⃣ Место забора (D)</h3>
-    <p>
-      Если в таблице уже есть такой же номер заказа (A), найди его место забора:
-    </p>
-    <p class="terminal">=ВПР(A2; A:D; 4; ЛОЖЬ)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери первую пустую ячейку в столбце "Место забора"</li>
-      <li>Вставь формулу и нажми Enter</li>
-      <li>Протяни вниз, чтобы заполнить все строки</li>
-    </ul>
-
-    <h3>4️⃣ Выделение 5 максимальных значений</h3>
-    <p>
-      Чтобы выделить 5 наибольших значений в столбце "Оборот по кассе", сделай
-      следующее:
-    </p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выдели столбец B</li>
-      <li>Перейди в "Условное форматирование"</li>
-      <li>Выбери "Правила отбора ячеек" → "10 наибольших значений"</li>
-      <li>Замени "10" на "5" и задай цвет выделения</li>
-    </ul>
-
-    <h3>5️⃣ Сумма значений в диапазоне</h3>
-    <p>Если хочешь посчитать сумму значений в столбце, используй:</p>
-    <p class="terminal">=СУММ(B2:B100)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери ячейку, в которой нужно отобразить сумму</li>
-      <li>Введи формулу и нажми Enter</li>
-    </ul>
-
-    <h3>6️⃣ Среднее значение</h3>
-    <p>Чтобы найти среднее значение по столбцу, используй:</p>
-    <p class="terminal">=СРЗНАЧ(B2:B100)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери ячейку, где нужно отобразить результат</li>
-      <li>Введи формулу и нажми Enter</li>
-    </ul>
-
-    <h3>7️⃣ Поиск определенного значения</h3>
-    <p>Чтобы найти, например, оборот для конкретного заказа, используй:</p>
-    <p class="terminal">=ВПР(номер_заказа; A:B; 2; ЛОЖЬ)</p>
-    <ul>
-      <p>🔹 Как сделать:</p>
-      <li>Выбери ячейку, в которой нужно отобразить результат</li>
-      <li>Введи формулу и нажми Enter</li>
-    </ul>
 
     <div class="footer">
       <p>Надеюсь, что это поможет. Успехов в работе с Excel! 🚀</p>
