--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./tab-favicon.ico"
+      href="./enbt.ico"
       type="image/x-icon"
     />
     <title>Объяснение Excel-формул</title>
@@ -19,6 +19,8 @@
         font-family: Arial, sans-serif;
         line-height: 1.6;
         margin: 20px;
+        max-width: 800px;
+        margin: auto;
       }
       h1,
       h2,
@@ -34,6 +36,8 @@
         color: #f4f4f4;
         padding: 10px;
         font-family: 'Courier New', Courier, monospace;
+        overflow-x: auto;
+        white-space: pre-wrap;
       }
       ul {
         list-style-type: '🍀';
@@ -44,6 +48,15 @@
       }
       ul li {
         margin: 5px 0;
+      }
+      .footer {
+        text-align: center;
+        margin-top: 20px;
+      }
+      @media (max-width: 600px) {
+        body {
+          padding: 10px;
+        }
       }
     </style>
   </head>
@@ -106,21 +119,7 @@
     <p>Округление вверх:</p>
     <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
 
-    <h3>🔟 Работа с массивами</h3>
-    <p>Поиск максимального значения в каждой строке (новые версии Excel):</p>
-    <p class="terminal">=МАКСЕСЛИМН(A1:D1)</p>
-    <p>Сумма значений по условиям:</p>
-    <p class="terminal">=СУММЕСЛИ(A1:A10; ">10"; B1:B10)</p>
-
-    <h3>1️⃣1️⃣ Разделение текста</h3>
-    <p>Извлечение первых 5 символов:</p>
-    <p class="terminal">=ЛЕВСИМВ(A1; 5)</p>
-    <p>Извлечение последних 3 символов:</p>
-    <p class="terminal">=ПРАВСИМВ(A1; 3)</p>
-    <p>Извлечение текста из середины строки:</p>
-    <p class="terminal">=ПСТР(A1; 3; 4)</p>
-
-    <h3>📌 Автозаполнение</h3>
+    <h3>🔟 Автозаполнение</h3>
     <p>
       После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
       формулу ко всему столбцу.
