--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./enbt.ico"
+      href="./tab-favicon.ico"
       type="image/x-icon"
     />
     <title>Объяснение Excel-формул</title>
