--- a/index.html
+++ b/index.html
@@ -128,5 +128,14 @@
     <div class="footer">
       <p>Надеюсь, что это поможет. Успехов в работе с Excel! 🚀</p>
     </div>
+    <script>
+      // Google Analytics
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+      gtag('config', 'UA-123456789-1')
+    </script>
   </body>
 </html>
