--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JFZVZY2SCJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-JFZVZY2SCJ')
+    </script>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -130,12 +144,12 @@
     </div>
     <script>
       // Google Analytics
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-      gtag('config', 'UA-123456789-1')
+      // window.dataLayer = window.dataLayer || []
+      // function gtag() {
+      //   dataLayer.push(arguments)
+      // }
+      // gtag('js', new Date())
+      // gtag('config', 'UA-123456789-1')
     </script>
   </body>
 </html>
