--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="5a8d78e5-c592-477c-990b-410b3a79e557"
+      type="text/javascript"
+      async
+    ></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
