--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       //   dataLayer.push(arguments)
       // }
       // gtag('js', new Date())
-      // gtag('config', 'UA-123456789-1')
+      // gtag('config', 'G-JFZVZY2SCJ')
     </script>
   </body>
 </html>
