--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <script
+    <!--script
       id="Cookiebot"
       src="https://consent.cookiebot.com/uc.js"
       data-cbid="5a8d78e5-c592-477c-990b-410b3a79e557"
       type="text/javascript"
       async
     ></script>
-    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-JFZVZY2SCJ"
@@ -21,7 +20,7 @@
       gtag('js', new Date())
 
       gtag('config', 'G-JFZVZY2SCJ')
-    </script>
+        </script-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
