--- a/index.html
+++ b/index.html
@@ -1,26 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <!--script
-      id="Cookiebot"
-      src="https://consent.cookiebot.com/uc.js"
-      data-cbid="5a8d78e5-c592-477c-990b-410b3a79e557"
-      type="text/javascript"
-      async
-    ></script>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-JFZVZY2SCJ"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'G-JFZVZY2SCJ')
-        </script-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -32,130 +12,80 @@
       type="image/x-icon"
     />
     <title>Объяснение Excel-формул</title>
-    <style>
-      body {
-        min-height: 100vh;
-        padding: 20px;
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 20px;
-        max-width: 800px;
-        margin: auto;
-      }
-      h1,
-      h2,
-      h3 {
-        color: #333;
-      }
-      p {
-        margin: 10px 0;
-      }
-      .terminal {
-        background-color: #447fa8;
-        border-left: 4px solid rebeccapurple;
-        color: #f4f4f4;
-        padding: 10px;
-        font-family: 'Courier New', Courier, monospace;
-        overflow-x: auto;
-        white-space: pre-wrap;
-      }
-      ul {
-        list-style-type: '🍀';
-        padding: 0;
-      }
-      ul p {
-        font-weight: bold;
-      }
-      ul li {
-        margin: 5px 0;
-      }
-      .footer {
-        text-align: center;
-        margin-top: 20px;
-      }
-      @media (max-width: 600px) {
-        body {
-          padding: 10px;
-        }
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="./style.css"
+    />
   </head>
   <body>
-    <h1>Объяснение Excel-формул</h1>
+    <div id="main">
+      <h1>Объяснение Excel-формул</h1>
 
-    <h2>Основные формулы и их применение</h2>
+      <h2>Основные формулы и их применение</h2>
 
-    <h3>1️⃣ Сложение значений</h3>
-    <p>Чтобы сложить числа в диапазоне, используй:</p>
-    <p class="terminal">=СУММ(A1:A10)</p>
+      <h3>1️⃣ Сложение значений</h3>
+      <p>Чтобы сложить числа в диапазоне, используй:</p>
+      <p class="terminal">=СУММ(A1:A10)</p>
 
-    <h3>2️⃣ Среднее значение</h3>
-    <p>Чтобы вычислить среднее арифметическое:</p>
-    <p class="terminal">=СРЗНАЧ(A1:A10)</p>
+      <h3>2️⃣ Среднее значение</h3>
+      <p>Чтобы вычислить среднее арифметическое:</p>
+      <p class="terminal">=СРЗНАЧ(A1:A10)</p>
 
-    <h3>3️⃣ Максимальное и минимальное значение</h3>
-    <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
-    <p class="terminal">=МАКС(A1:A10)</p>
-    <p class="terminal">=МИН(A1:A10)</p>
+      <h3>3️⃣ Максимальное и минимальное значение</h3>
+      <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
+      <p class="terminal">=МАКС(A1:A10)</p>
+      <p class="terminal">=МИН(A1:A10)</p>
 
-    <h3>4️⃣ Количество записей</h3>
-    <p>Подсчет непустых ячеек:</p>
-    <p class="terminal">=СЧЁТЗ(A1:A10)</p>
-    <p>Подсчет только числовых значений:</p>
-    <p class="terminal">=СЧЁТ(A1:A10)</p>
+      <h3>4️⃣ Количество записей</h3>
+      <p>Подсчет непустых ячеек:</p>
+      <p class="terminal">=СЧЁТЗ(A1:A10)</p>
+      <p>Подсчет только числовых значений:</p>
+      <p class="terminal">=СЧЁТ(A1:A10)</p>
 
-    <h3>5️⃣ Условные операторы</h3>
-    <p>Для проверки условий:</p>
-    <p class="terminal">=ЕСЛИ(A1>100; "Высокий"; "Низкий")</p>
-    <p>Объединение нескольких условий:</p>
-    <p class="terminal">
-      =ЕСЛИ(И(A1>50; B1<20); "Условие выполнено"; "Не выполнено")
-    </p>
+      <h3>5️⃣ Условные операторы</h3>
+      <p>Для проверки условий:</p>
+      <p class="terminal">=ЕСЛИ(A1&gt;100; "Высокий"; "Низкий")</p>
+      <p>Объединение нескольких условий:</p>
+      <p class="terminal">
+        =ЕСЛИ(И(A1&gt;50; B1&lt;20); "Условие выполнено"; "Не выполнено")
+      </p>
 
-    <h3>6️⃣ Поиск данных</h3>
-    <p>Для поиска значения в таблице по ключу:</p>
-    <p class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</p>
-    <p>Для поиска с учетом гибкости диапазона:</p>
-    <p class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</p>
+      <h3>6️⃣ Поиск данных</h3>
+      <p>Для поиска значения в таблице по ключу:</p>
+      <p class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</p>
+      <p>Для поиска с учетом гибкости диапазона:</p>
+      <p class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</p>
 
-    <h3>7️⃣ Работа с датами</h3>
-    <p>Текущая дата и время:</p>
-    <p class="terminal">=СЕГОДНЯ()</p>
-    <p class="terminal">=СЕЙЧАС()</p>
-    <p>Разница между датами:</p>
-    <p class="terminal">=РАЗНДАТ(A1; B1; "D")</p>
+      <h3>7️⃣ Работа с датами</h3>
+      <p>Текущая дата и время:</p>
+      <p class="terminal">=СЕГОДНЯ()</p>
+      <p class="terminal">=СЕЙЧАС()</p>
+      <p>Разница между датами:</p>
+      <p class="terminal">=РАЗНДАТ(A1; B1; "D")</p>
 
-    <h3>8️⃣ Объединение текста</h3>
-    <p>Чтобы объединить текст из нескольких ячеек:</p>
-    <p class="terminal">=СЦЕПИТЬ(A1; " "; B1)</p>
-    <p>Или в новых версиях Excel:</p>
-    <p class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</p>
+      <h3>8️⃣ Объединение текста</h3>
+      <p>Чтобы объединить текст из нескольких ячеек:</p>
+      <p class="terminal">=СЦЕПИТЬ(A1; " "; B1)</p>
+      <p>Или в новых версиях Excel:</p>
+      <p class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</p>
 
-    <h3>9️⃣ Округление чисел</h3>
-    <p>Округление до ближайшего целого:</p>
-    <p class="terminal">=ОКРУГЛ(A1; 0)</p>
-    <p>Округление вниз:</p>
-    <p class="terminal">=ОКРУГЛВНИЗ(A1; 0)</p>
-    <p>Округление вверх:</p>
-    <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
+      <h3>9️⃣ Округление чисел</h3>
+      <p>Округление до ближайшего целого:</p>
+      <p class="terminal">=ОКРУГЛ(A1; 0)</p>
+      <p>Округление вниз:</p>
+      <p class="terminal">=ОКРУГЛВНИЗ(A1; 0)</p>
+      <p>Округление вверх:</p>
+      <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
 
-    <h3>🔟 Автозаполнение</h3>
-    <p>
-      После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
-      формулу ко всему столбцу.
-    </p>
+      <h3>🔟 Автозаполнение</h3>
+      <p>
+        После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
+        формулу ко всему столбцу.
+      </p>
 
-    <div class="footer">
-      <p>Надеюсь, что это поможет. Успехов в работе с Excel! 🚀</p>
+      <div class="footer">
+        <p>Успехов в работе с Excel! 🚀</p>
+      </div>
     </div>
-    <script>
-      // Google Analytics
-      // window.dataLayer = window.dataLayer || []
-      // function gtag() {
-      //   dataLayer.push(arguments)
-      // }
-      // gtag('js', new Date())
-      // gtag('config', 'G-JFZVZY2SCJ')
-    </script>
   </body>
 </html>
