--- a/index.html
+++ b/index.html
@@ -19,30 +19,28 @@
   </head>
   <body>
     <div id="main">
-      <h1>Объяснение Excel-формул</h1>
+      <h1>Основные формулы и их применение</h1>
 
-      <h2>Основные формулы и их применение</h2>
-
-      <h3>1️⃣ Сложение значений</h3>
+      <h2>1️⃣ Сложение значений</h2>
       <p>Чтобы сложить числа в диапазоне, используй:</p>
       <p class="terminal">=СУММ(A1:A10)</p>
 
-      <h3>2️⃣ Среднее значение</h3>
+      <h2>2️⃣ Среднее значение</h2>
       <p>Чтобы вычислить среднее арифметическое:</p>
       <p class="terminal">=СРЗНАЧ(A1:A10)</p>
 
-      <h3>3️⃣ Максимальное и минимальное значение</h3>
+      <h2>3️⃣ Максимальное и минимальное значение</h2>
       <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
       <p class="terminal">=МАКС(A1:A10)</p>
       <p class="terminal">=МИН(A1:A10)</p>
 
-      <h3>4️⃣ Количество записей</h3>
+      <h2>4️⃣ Количество записей</h2>
       <p>Подсчет непустых ячеек:</p>
       <p class="terminal">=СЧЁТЗ(A1:A10)</p>
       <p>Подсчет только числовых значений:</p>
       <p class="terminal">=СЧЁТ(A1:A10)</p>
 
-      <h3>5️⃣ Условные операторы</h3>
+      <h2>5️⃣ Условные операторы</h2>
       <p>Для проверки условий:</p>
       <p class="terminal">=ЕСЛИ(A1&gt;100; "Высокий"; "Низкий")</p>
       <p>Объединение нескольких условий:</p>
@@ -50,26 +48,26 @@
         =ЕСЛИ(И(A1&gt;50; B1&lt;20); "Условие выполнено"; "Не выполнено")
       </p>
 
-      <h3>6️⃣ Поиск данных</h3>
+      <h2>6️⃣ Поиск данных</h2>
       <p>Для поиска значения в таблице по ключу:</p>
       <p class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</p>
       <p>Для поиска с учетом гибкости диапазона:</p>
       <p class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</p>
 
-      <h3>7️⃣ Работа с датами</h3>
+      <h2>7️⃣ Работа с датами</h2>
       <p>Текущая дата и время:</p>
       <p class="terminal">=СЕГОДНЯ()</p>
       <p class="terminal">=СЕЙЧАС()</p>
       <p>Разница между датами:</p>
       <p class="terminal">=РАЗНДАТ(A1; B1; "D")</p>
 
-      <h3>8️⃣ Объединение текста</h3>
+      <h2>8️⃣ Объединение текста</h2>
       <p>Чтобы объединить текст из нескольких ячеек:</p>
       <p class="terminal">=СЦЕПИТЬ(A1; " "; B1)</p>
       <p>Или в новых версиях Excel:</p>
       <p class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</p>
 
-      <h3>9️⃣ Округление чисел</h3>
+      <h2>9️⃣ Округление чисел</h2>
       <p>Округление до ближайшего целого:</p>
       <p class="terminal">=ОКРУГЛ(A1; 0)</p>
       <p>Округление вниз:</p>
@@ -77,13 +75,83 @@
       <p>Округление вверх:</p>
       <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
 
-      <h3>🔟 Автозаполнение</h3>
+      <h2>🔟 Автозаполнение</h2>
       <p>
         После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
         формулу ко всему столбцу.
       </p>
 
       <div class="footer">
+        <p>
+          💡 <strong>Совет:</strong> Используй <strong>F4</strong>, чтобы
+          зафиксировать ячейку при копировании формулы.
+        </p>
+        <p>
+          🔍 <strong>Совет:</strong> Используй <strong>Ctrl + Z</strong>, чтобы
+          отменить действие.
+        </p>
+        <p>
+          📊 <strong>Совет:</strong> Используй <strong>Alt + Enter</strong>,
+          чтобы добавить перенос строки в ячейке.
+        </p>
+        <p>
+          📈 <strong>Совет:</strong> Используй
+          <strong>Ctrl + Shift + L</strong>, чтобы включить фильтры в таблице.
+        </p>
+        <p>
+          📅 <strong>Совет:</strong> Используй <strong>Ctrl + ;</strong>, чтобы
+          вставить текущую дату.
+        </p>
+        <p>
+          🕒 <strong>Совет:</strong> Используй
+          <strong>Ctrl + Shift + ;</strong>, чтобы вставить текущее время.
+        </p>
+        <p>
+          📋 <strong>Совет:</strong> Используй <strong>Ctrl + C</strong>, чтобы
+          скопировать выделенные ячейки.
+        </p>
+        <p>
+          ✂️ <strong>Совет:</strong> Используй <strong>Ctrl + X</strong>, чтобы
+          вырезать выделенные ячейки.
+        </p>
+        <p>
+          📥 <strong>Совет:</strong> Используй <strong>Ctrl + V</strong>, чтобы
+          вставить скопированные или вырезанные ячейки.
+        </p>
+        <p>
+          🖨️ <strong>Совет:</strong> Используй <strong>Ctrl + P</strong>, чтобы
+          открыть окно печати.
+        </p>
+        <p>
+          🔄 <strong>Совет:</strong> Используй <strong>Ctrl + R</strong>, чтобы
+          заполнить ячейки справа от выделенной ячейки.
+        </p>
+        <p>
+          🔼 <strong>Совет:</strong> Используй <strong>Ctrl + D</strong>, чтобы
+          заполнить ячейки ниже от выделенной ячейки.
+        </p>
+        <p>
+          🔍 <strong>Совет:</strong> Используй <strong>Ctrl + F</strong>, чтобы
+          открыть окно поиска.
+        </p>
+        <p>
+          🔄 <strong>Совет:</strong> Используй <strong>Ctrl + H</strong>, чтобы
+          открыть окно замены.
+        </p>
+        <p>
+          🔄 <strong>Совет:</strong> Используй <strong>Ctrl + A</strong>, чтобы
+          выделить все ячейки на листе.
+        </p>
+
+        <p>Это базовые формулы, которые помогут тебе в работе с Excel.</p>
+        <a href="https://lifehacker.ru/formuly-v-excel/">
+          <button
+            class="button"
+            role="button"
+          >
+            <span class="text">https://lifehacker.ru/formuly-v-excel</span>
+          </button>
+        </a>
         <p>Успехов в работе с Excel! 🚀</p>
       </div>
     </div>
