--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </p>
 
         <p>Это базовые формулы, которые помогут тебе в работе с Excel.</p>
-        <a href="https://lifehacker.ru/formuly-v-excel/">
+        <a href="https://lifehacker.ru/formuly-v-excel">
           <button
             class="button"
             role="button"
