--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
           🔄 <strong>Совет:</strong> Используй <strong>Ctrl + A</strong>, чтобы
           выделить все ячейки на листе.
         </p>
-
         <p>Это базовые формулы, которые помогут тебе в работе с Excel.</p>
-        <a href="https://lifehacker.ru/formuly-v-excel">
+        <a
+          href="https://lifehacker.ru/formuly-v-excel"
+          target="_blank"
+        >
           <button
             class="button"
             role="button"
@@ -152,7 +154,7 @@
             <span class="text">https://lifehacker.ru/formuly-v-excel</span>
           </button>
         </a>
-        <p>Успехов в работе с Excel! 🚀</p>
+        <p>Успехов в работе с Excel!</p>
       </div>
     </div>
   </body>
