--- a/index.html
+++ b/index.html
@@ -147,12 +147,14 @@
           href="https://lifehacker.ru/formuly-v-excel"
           target="_blank"
         >
-          <button
-            class="button"
-            role="button"
-          >
-            <span class="text">https://lifehacker.ru/formuly-v-excel</span>
-          </button>
+          <div class="button-box">
+            <button
+              class="button"
+              role="button"
+            >
+              <span class="text">https://lifehacker.ru/formuly-v-excel</span>
+            </button>
+          </div>
         </a>
         <p>Успехов в работе с Excel!</p>
       </div>
