--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               class="button"
               role="button"
             >
-              <span class="text">https://lifehacker.ru/formuly-v-excel</span>
+              <span class="text">формулы Excel</span>
             </button>
           </div>
         </a>
