--- a/index.html
+++ b/index.html
@@ -12,76 +12,302 @@
       type="image/x-icon"
     />
     <title>Объяснение Excel-формул</title>
-    <link
-      rel="stylesheet"
-      href="./style.css"
-    />
+    <style>
+      :root {
+        --color-primary: rgb(68, 127, 168);
+        --color-secondary: rgb(244, 244, 244);
+        --color-text: rgb(50, 50, 50);
+        --color-highlight: rgb(107, 137, 114);
+        --color-accent: rgb(140, 175, 191);
+        --color-button-bg: rgba(68, 127, 168, 0.5);
+        --color-button-hover: rgba(244, 244, 244, 0.5);
+        --color-button-active-shadow: rgba(110, 80, 20, 0.4);
+        --color-button-active-inset: rgb(177, 125, 16);
+        --color-footer-text: #fff;
+      }
+
+      *,
+      *::before,
+      *::after {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+      }
+
+      html {
+        scroll-behavior: smooth;
+        font-size: 16px;
+        color: var(--color-text);
+      }
+
+      body {
+        min-height: 100vh;
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        max-width: 800px;
+        margin: 0 auto;
+        background: url('./baum.jpg') no-repeat center center fixed;
+        background-size: cover;
+      }
+
+      #main {
+        font-weight: bold;
+        padding: 1.5em 1em;
+        border-radius: 0.3em;
+        line-height: 2.5em;
+        backdrop-filter: blur(10px);
+        background-image: linear-gradient(
+          160deg,
+          rgba(var(--color-primary), 0.5),
+          rgba(var(--color-secondary), 0.5)
+        );
+        background-size: 100%;
+        background-position: center;
+        transition: all 2s ease-in-out;
+      }
+
+      h1 {
+        text-align: center;
+        padding-top: 1em;
+        margin-bottom: 1.5em;
+        color: var(--color-footer-text);
+        text-shadow: 0 0 5px var(--color-highlight),
+          1px 1px 5px var(--color-highlight);
+      }
+
+      h1,
+      h2,
+      h3,
+      p {
+        color: var(--color-accent);
+        text-shadow: 0 1px 1px #427687, -1px -1px 1px #427687;
+      }
+
+      p {
+        margin: 20px 0;
+        text-shadow: 0 0 5px var(--color-highlight),
+          1px 1px 5px var(--color-highlight);
+      }
+
+      .terminal {
+        border-left: 0.1em solid rgba(var(--color-primary), 0.5);
+        padding: 0.5em;
+        font-family: 'Courier New', Courier, monospace;
+        overflow-x: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        background-image: linear-gradient(
+          160deg,
+          rgba(var(--color-highlight), 0.5),
+          rgba(var(--color-secondary), 0.5)
+        );
+        background-size: 100%;
+        background-position: center;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8),
+          -1px -1px 1px var(--color-accent);
+      }
+
+      p.terminal {
+        text-align: center;
+        font-size: 1.2em;
+        font-weight: bold;
+        color: var(--color-text);
+        text-shadow: 0 0 1px var(--color-accent), 0 1px 1px var(--color-accent);
+      }
+
+      ul {
+        list-style-type: '🍀';
+        padding: 0;
+      }
+
+      ul p {
+        font-weight: bold;
+      }
+
+      ul li {
+        margin: 5px 0;
+      }
+
+      button,
+      .button {
+        display: inline-block;
+        width: 100%;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-family: inherit;
+        cursor: pointer;
+        border: none;
+        border-radius: 0.5em;
+        text-align: center;
+        background-color: var(--color-button-bg);
+        color: var(--color-footer-text);
+        transition: all 0.2s ease-in-out;
+      }
+
+      button:hover,
+      .button:hover,
+      .button:focus {
+        background-color: var(--color-button-hover);
+        color: var(--color-text);
+      }
+
+      button:active,
+      .button:active {
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+          0 3px 6px var(--color-button-active-shadow),
+          inset 0 -2px 5px 1px var(--color-button-active-inset);
+      }
+
+      button:focus-visible {
+        outline: 2px solid var(--color-button-hover);
+        outline-offset: 2px;
+      }
+
+      .button {
+        height: 2.75em;
+        line-height: 2.5em;
+        padding: 0 1em;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+          0 3px 6px var(--color-button-active-shadow),
+          inset 0 -2px 5px 1px rgba(139, 66, 8, 1);
+        background-image: linear-gradient(
+          160deg,
+          #a54e07,
+          #b47e11,
+          #fef1a2,
+          #bc881b,
+          #a54e07
+        );
+        background-size: 100% 100%;
+        color: rgb(120, 50, 5);
+        text-shadow: 0 2px 2px rgba(250, 227, 133, 1);
+      }
+
+      .button:hover,
+      .button:focus {
+        background-size: 150% 150%;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2),
+          0 6px 6px rgba(0, 0, 0, 0.23);
+        color: rgba(120, 50, 5, 0.8);
+      }
+
+      .text {
+        text-transform: uppercase;
+      }
+
+      .footer {
+        margin-top: 20px;
+        color: var(--color-footer-text);
+        text-shadow: 1px 1px 5px #111, 2px 2px 5px #111;
+      }
+
+      @media (min-width: 601px) {
+        .button {
+          display: block;
+        }
+      }
+
+      @media (max-width: 319px) {
+        .button {
+          display: inline-block;
+          height: max-content;
+        }
+        #main {
+          width: 100%;
+          font-size: 0.8em;
+        }
+      }
+    </style>
   </head>
-  <body>
+  <body id="nach_oben">
     <div id="main">
-      <h1>Основные формулы и их применение</h1>
+      <header>
+        <h1>Основные формулы и их применение</h1>
+      </header>
 
-      <h2>1️⃣ Сложение значений</h2>
-      <p>Чтобы сложить числа в диапазоне, используй:</p>
-      <p class="terminal">=СУММ(A1:A10)</p>
+      <section>
+        <h2>1️⃣ Сложение значений</h2>
+        <p>Чтобы сложить числа в диапазоне, используй:</p>
+        <code class="terminal">=СУММ(A1:A10)</code>
+      </section>
 
-      <h2>2️⃣ Среднее значение</h2>
-      <p>Чтобы вычислить среднее арифметическое:</p>
-      <p class="terminal">=СРЗНАЧ(A1:A10)</p>
+      <section>
+        <h2>2️⃣ Среднее значение</h2>
+        <p>Чтобы вычислить среднее арифметическое:</p>
+        <code class="terminal">=СРЗНАЧ(A1:A10)</code>
+      </section>
 
-      <h2>3️⃣ Максимальное и минимальное значение</h2>
-      <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
-      <p class="terminal">=МАКС(A1:A10)</p>
-      <p class="terminal">=МИН(A1:A10)</p>
+      <section>
+        <h2>3️⃣ Максимальное и минимальное значение</h2>
+        <p>Чтобы найти наибольшее и наименьшее число в диапазоне:</p>
+        <code class="terminal">=МАКС(A1:A10)</code>
+        <code class="terminal">=МИН(A1:A10)</code>
+      </section>
 
-      <h2>4️⃣ Количество записей</h2>
-      <p>Подсчет непустых ячеек:</p>
-      <p class="terminal">=СЧЁТЗ(A1:A10)</p>
-      <p>Подсчет только числовых значений:</p>
-      <p class="terminal">=СЧЁТ(A1:A10)</p>
+      <section>
+        <h2>4️⃣ Количество записей</h2>
+        <p>Подсчет непустых ячеек:</p>
+        <code class="terminal">=СЧЁТЗ(A1:A10)</code>
+        <p>Подсчет только числовых значений:</p>
+        <code class="terminal">=СЧЁТ(A1:A10)</code>
+      </section>
 
-      <h2>5️⃣ Условные операторы</h2>
-      <p>Для проверки условий:</p>
-      <p class="terminal">=ЕСЛИ(A1&gt;100; "Высокий"; "Низкий")</p>
-      <p>Объединение нескольких условий:</p>
-      <p class="terminal">
-        =ЕСЛИ(И(A1&gt;50; B1&lt;20); "Условие выполнено"; "Не выполнено")
-      </p>
+      <section>
+        <h2>5️⃣ Условные операторы</h2>
+        <p>Для проверки условий:</p>
+        <code class="terminal">=ЕСЛИ(A1&gt;100; "Высокий"; "Низкий")</code>
+        <p>Объединение нескольких условий:</p>
+        <code class="terminal"
+          >=ЕСЛИ(И(A1&gt;50; B1&lt;20); "Условие выполнено"; "Не
+          выполнено")</code
+        >
+      </section>
 
-      <h2>6️⃣ Поиск данных</h2>
-      <p>Для поиска значения в таблице по ключу:</p>
-      <p class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</p>
-      <p>Для поиска с учетом гибкости диапазона:</p>
-      <p class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</p>
+      <section>
+        <h2>6️⃣ Поиск данных</h2>
+        <p>Для поиска значения в таблице по ключу:</p>
+        <code class="terminal">=ВПР(10; A1:B10; 2; ЛОЖЬ)</code>
+        <p>Для поиска с учетом гибкости диапазона:</p>
+        <code class="terminal">=ИНДЕКС(B1:B10; ПОИСКПОЗ(10; A1:A10; 0))</code>
+      </section>
 
-      <h2>7️⃣ Работа с датами</h2>
-      <p>Текущая дата и время:</p>
-      <p class="terminal">=СЕГОДНЯ()</p>
-      <p class="terminal">=СЕЙЧАС()</p>
-      <p>Разница между датами:</p>
-      <p class="terminal">=РАЗНДАТ(A1; B1; "D")</p>
+      <section>
+        <h2>7️⃣ Работа с датами</h2>
+        <p>Текущая дата и время:</p>
+        <code class="terminal">=СЕГОДНЯ()</code>
+        <code class="terminal">=СЕЙЧАС()</code>
+        <p>Разница между датами:</p>
+        <code class="terminal">=РАЗНДАТ(A1; B1; "D")</code>
+      </section>
 
-      <h2>8️⃣ Объединение текста</h2>
-      <p>Чтобы объединить текст из нескольких ячеек:</p>
-      <p class="terminal">=СЦЕПИТЬ(A1; " "; B1)</p>
-      <p>Или в новых версиях Excel:</p>
-      <p class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</p>
+      <section>
+        <h2>8️⃣ Объединение текста</h2>
+        <p>Чтобы объединить текст из нескольких ячеек:</p>
+        <code class="terminal">=СЦЕПИТЬ(A1; " "; B1)</code>
+        <p>Или в новых версиях Excel:</p>
+        <code class="terminal">=ТЕКСТСЦЕП(A1; " "; B1)</code>
+      </section>
 
-      <h2>9️⃣ Округление чисел</h2>
-      <p>Округление до ближайшего целого:</p>
-      <p class="terminal">=ОКРУГЛ(A1; 0)</p>
-      <p>Округление вниз:</p>
-      <p class="terminal">=ОКРУГЛВНИЗ(A1; 0)</p>
-      <p>Округление вверх:</p>
-      <p class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</p>
+      <section>
+        <h2>9️⃣ Округление чисел</h2>
+        <p>Округление до ближайшего целого:</p>
+        <code class="terminal">=ОКРУГЛ(A1; 0)</code>
+        <p>Округление вниз:</p>
+        <code class="terminal">=ОКРУГЛВНИЗ(A1; 0)</code>
+        <p>Округление вверх:</p>
+        <code class="terminal">=ОКРУГЛВВЕРХ(A1; 0)</code>
+      </section>
 
-      <h2>🔟 Автозаполнение</h2>
-      <p>
-        После ввода формулы, потяни за нижний угол ячейки вниз, чтобы применить
-        формулу ко всему столбцу.
-      </p>
+      <section>
+        <h2>🔟 Автозаполнение</h2>
+        <p>
+          После ввода формулы, потяни за нижний угол ячейки вниз, чтобы
+          применить формулу ко всему столбцу.
+        </p>
+      </section>
 
-      <div class="footer">
+      <footer class="footer">
         <p>
           💡 <strong>Совет:</strong> Используй <strong>F4</strong>, чтобы
           зафиксировать ячейку при копировании формулы.
@@ -143,21 +369,20 @@
           выделить все ячейки на листе.
         </p>
         <p>Это базовые формулы, которые помогут тебе в работе с Excel.</p>
-        <a
+        <!-- <a href="#nach_oben">Наверх</a> -->
+        <!-- <a
           href="https://lifehacker.ru/formuly-v-excel"
           target="_blank"
         >
-          <div class="button-box">
-            <button
-              class="button"
-              role="button"
-            >
-              <span class="text">формулы Excel</span>
-            </button>
-          </div>
-        </a>
+          <button
+            class="button"
+            role="button"
+          >
+            <span class="text">формулы Excel</span>
+          </button>
+        </a> -->
         <p>Успехов в работе с Excel!</p>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
